[package]
name = "mikrotik_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
serde = {version = "1.0.179", features = ["derive"]}
config = "0.13.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

